# su_chef

./: .gitignore  .setup_assistant  CMakeLists.txt  LICENSE.md  Licenses_Related_Projects.md  README.md  package.xml
braccio_ros/: braccio_ros.ino
config/: fake_controllers.yaml  kinematics.yaml  visual.srdf
launch/: connect.launch  default_warehouse_db.launch  demo.launch  demo_remote.launch  detection.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  rviz.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
models/: yolov3.cfg  yolov3.names
parse_and_publish/: parse_and_publish.cpp
scripts/: braccio_xy_bb_target.py  braccio_xy_plane.py  find_contour.py  object_detection_opencv.py  relay.ino  target_object.py
teensy/: platformio.ini
teensy/src/: firmware.ino
urdf/: braccio_arm.urdf
