<?xml version="1.0"?>
<package>
  <name>ros_braccio_opencv_obj_detect_grab</name>
  <version>0.0.0</version>
  <description>The ros_braccio_opencv_obj_detect_grab package</description>

  <maintainer email="will.stedden@gmail.com">stedn</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>